--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Liof.io</title>
+    <link rel="stylesheet" media="all" href="http://localhost:3000/assets/global.css" data-turbolinks-track="true">
   </head>
   <body>
     <div id='root'>
