Integrate react-style (css in js)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,8 @@
-<html>
+<!DOCTYPE html><html>
   <head>
     <title>Liof.io</title>
-    <link rel="stylesheet" media="all" href="http://localhost:3000/assets/global.css" data-turbolinks-track="true">
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">
-    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
-    <div id='root'>
-    </div>
   </body>
   <script src="bundle.js"></script>
 </html>
