--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Liof.io</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
   </body>
