--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html><html>
   <head>
     <title>Liof.io</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:light,regular,medium,bold" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1">
+    <style>
+      @font-face {
+        font-family: "And Black";
+        src: url("app/styles/fonts/and_black.woff") format('woff'),
+             url("app/styles/fonts/and_black.ttf") format('truetype');
+      }
+      body {
+        padding: 0;
+        margin: 0;
+        background-color: #F6F5EE; /*#F9F9F9*/
+      }
+    </style>
   </head>
   <body>
   </body>
