Change body background color

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
       body {
         padding: 0;
         margin: 0;
-        background-color: #F6F5EE; /*#F9F9F9*/
+        background-color: #F6F6F6;
       }
     </style>
   </head>
