--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:light,regular,medium,bold" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
     <style>
       @font-face {
         font-family: "And Black";
