--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
         padding: 0;
         margin: 0;
         background-color: #F6F6F6;
+        font-weight: 300;
       }
     </style>
   </head>
